--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ tabela.tsv
 validacao_cruzada.html
 semCV.Rmd
 semCV.html
+Artigo-SOBREA_rev NH.pdf
+Impacto_sigma-rev NH.pdf
+SOBREA 2018_Moda-Mediana-Média_rev NH.pdf
+Centro 2015_moda e cia.xlsx
