--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Artigo-SOBREA_rev NH.pdf
 Impacto_sigma-rev NH.pdf
 SOBREA 2018_Moda-Mediana-Média_rev NH.pdf
 Centro 2015_moda e cia.xlsx
+sobrea.Rproj
